Bug 639945 - tooltips are not displayed on inline svg elements. r=dao,bzbarsky